fix about padding on mobile devices

--- a/styles/style.css
+++ b/styles/style.css
@@ -359,6 +359,10 @@ a, .second {
         display: block;
     }
 
+    .about-content {
+        padding: 50px 25px;
+    }
+
     
 }
 
